--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
-    "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "next": "^10.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "remark": "11.0.2",
     "remark-html": "10.0.0"
   },
