--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.1.0",
     "date-fns": "^2.16.1",
     "fs": "0.0.1-security",
+    "instagram-web-api": "^2.2.2",
     "mdx-prism": "^0.3.1",
     "next": "10.0.4",
     "postcss": "^8.2.2",
@@ -25,6 +26,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rehype": "^11.0.0",
+    "tailwind-filter-utilities": "^2.0.0",
     "tailwindcss": "^2.0.2"
   }
 }
