--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@next/mdx": "^10.0.4",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
+    "canvas": "^2.7.0",
     "date-fns": "^2.16.1",
     "fs": "0.0.1-security",
-    "mdx-prism": "^0.3.1",
+    "jsbarcode": "^3.11.3",
+    "mdx-prism": "^0.3.3",
     "next": "10.0.4",
     "postcss": "^8.2.2",
     "prismjs": "^1.23.0",
