--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas": "^2.7.0",
     "date-fns": "^2.16.1",
     "fs": "0.0.1-security",
+    "instagram-web-api": "^2.2.2",
     "jsbarcode": "^3.11.3",
     "mdx-prism": "^0.3.3",
     "next": "^10.2.0",
