--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.1.0",
     "canvas": "^2.7.0",
     "date-fns": "^2.16.1",
+    "firebase-admin": "^9.9.0",
     "fs": "0.0.1-security",
     "jsbarcode": "^3.11.3",
     "mdx-prism": "^0.3.3",
