--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "canvas": "^2.7.0",
+    "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
     "firebase-admin": "^9.9.0",
     "fs": "0.0.1-security",
@@ -27,6 +28,7 @@
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-use": "^17.2.4",
     "rehype": "^11.0.0",
     "tailwind-filter-utilities": "^2.0.0",
     "tailwindcss": "^2.0.2",
