--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.1",
     "react-use": "^17.2.4",
     "rehype": "^11.0.0",
+    "swr": "^0.5.6",
     "tailwind-filter-utilities": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "yarn": "^1.22.10"
