--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "fs": "0.0.1-security",
     "jsbarcode": "^3.11.3",
     "mdx-prism": "^0.3.3",
-    "next": "^10.2.0",
+    "next": "^11.0.0",
     "postcss": "^8.2.2",
     "prismjs": "^1.23.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-use": "^17.2.4",
     "rehype": "^11.0.0",
     "swr": "^0.5.6",
