--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -34,5 +35,9 @@
     "tailwind-filter-utilities": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "yarn": "^1.22.10"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0"
   }
 }
