--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "rehype": "^11.0.0",
     "swr": "^0.5.6",
     "tailwind-filter-utilities": "^2.0.0",
-    "tailwindcss": "^2.0.2",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
-    "eslint-config-next": "^11.0.0"
+    "eslint-config-next": "^11.0.0",
+    "tailwindcss": "^2.2.0"
   }
 }
