--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "canvas": "^2.7.0",
+    "cloudinary-build-url": "^0.2.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
     "firebase-admin": "^9.9.0",
